--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/server.ts",
+    "payment": "nodemon ./src/payment.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "nodemailer": "^6.7.5",
+    "stripe": "^9.1.0",
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
